2008-07-24  Mike Kestner <mkestner@novell.com> 

	* libsteticui/CecilWidgetLibrary.cs (Load): use Refresh to get
	the cache info so it has a better resolver to work with if the
	cache is dirty.

2008-07-22  Mike Kestner <mkestner@novell.com> 

	* libsteticui/LibraryCache.cs: only perform attribute parsing if
	there is no objects.xml resource. If an objects.xml resource exists,
	it is the definitive source of exported capabilities.

2008-07-22  Mike Kestner <mkestner@novell.com> 

	* libsteticui/CecilClassDescriptor.cs: some null guarding in prop
	lookup method.

2008-07-21  Mike Kestner <mkestner@novell.com> 

	Patch from David Makovsky and Jeremie Laval.
	* libstetic/PropertyDescriptor.cs: use invariant culture for doubles.
	* libsteticui/GladeUtils.cs: use invariant culture for doubles.

2008-07-16  Mike Kestner <mkestner@novell.com> 

	* libsteticui/CecilWidgetLibrary.cs (LoadDependencies): always set
	up dependencies to ensure we never return null.

2008-07-16  Mike Kestner <mkestner@novell.com> 

	* libsteticui/ApplicationBackend.cs (RegisterLibrary): null guarding.

2008-07-14  Mike Krüger <mkrueger@novell.com> 

	* libsteticui/CecilWidgetLibrary.cs: fixed possible null reference
	  exception.

2008-07-11  Mike Kestner <mkestner@novell.com> 

	* libsteticui/ApplicationBackend.cs: removed some CWL spew. This
	case is apparently expected for first-time builds.

2008-07-01  Mike Kestner <mkestner@novell.com> 

	* libsteticui/AssemblyResolver.cs: make type resolver public.
	* libsteticui/LibraryCache.cs: [ToolboxItem] and [Category] scanner
	for identification of exported widgets from libraries.

2008-06-25  Mike Kestner <mkestner@novell.com> 

	* libsteticui/Application.cs: use resolver.
	* libsteticui/ApplicationBackend.cs: use resolver. 
	* libsteticui/AssemblyResolver.cs: integrate ImportContext. remove
	usused method and field resolution methods.
	* libsteticui/AssemblyWidgetLibrary.cs: refactor ImportContext. 
	use cached objects doc.